syntax = "proto3";

import "google/protobuf/empty.proto";
package gk;

option go_package = "pkg/pb";

service SecretService {
    rpc ListHashes(google.protobuf.Empty) returns (ListHashesResponse);
    rpc GetSecret(GetSecretRequest) returns (GetSecretResponse);
    rpc PutSecret(PutSecretRequest) returns (google.protobuf.Empty);
    rpc DeleteSecret(DeleteSecretRequest) returns (google.protobuf.Empty);
}

message ListHashesResponse {
    repeated KeyHash hashes = 1;
}

message KeyHash {
    string key = 1;
    bytes hash = 2;
}

message GetSecretRequest {
    string key = 1;
}

message GetSecretResponse {
    bytes data = 1;
    bytes hash = 2;
}

message PutSecretRequest {
    string key = 1;
    bytes data = 2;
    bytes known_hash = 3;
}

message DeleteSecretRequest {
    string key = 1;
    bytes known_hash = 2;
}
